--- a/LKPD4-2..html
+++ b/LKPD4-2..html
@@ -9,14 +9,17 @@
   <h1>
     <script>
     let nilai = parseInt(prompt("Masukkan nilai kalian:"));
-if (nilai >= 80) {
- alert("Nilai A");
-} else if (nilai >= 70) {
- alert("Nilai B");
-} else {
- alert("Nilai C");
-}
-</script>
+    if (nilai >= 80) {
+     alert("Nilai A");
+     alert("Kamu Pintar");
+    } else if (nilai >= 70) {
+     alert("Nilai B");
+     alert("Tingkakan Ya");
+    } else {
+     alert("Nilai C");
+     alert("Ayo Belajar lagi");
+    }
+    </script>
   </h1>
 </body>
 </html>
